@@ -17,16 +17,22 @@ export class PracticeForm extends React.Component{
             // id: '',
             text: '',
             articlesArray: [],
-            redirectToReferrer: false
+            redirectToReferrer: false,
+            user: null,
+            viewForm: true
         }
         this.handleChange = this.handleChange.bind(this);
         this.handleSubmit = this.handleSubmit.bind(this);
+        this.login = this.login.bind(this);
+        this.logout = this.logout.bind(this);
     }   
 
 
     componentDidMount(){
       const dbRef = fire.database().ref("items");
       console.log(dbRef);
+
+
 
       dbRef.on('value', (snapshot) => {
         let dbObjects = snapshot.val();
@@ -40,7 +46,41 @@ export class PracticeForm extends React.Component{
           articlesArray: tempState
         })
         console.log(((this.state.articlesArray).length) + 1)
+
+
+
+
+        // console.log("User Email Is: " + this.state.user.email)
+
+        // const checkDBRef = this.state.articlesArray;
+
+        // // console.log("User Email Is: " + this.state.user.email)
+        // console.log("Check Database: " + checkDBRef);
+        // checkDBRef.map((test) => {
+        //   console.log(test.author);
+        //   if(test.author === "Avril Ducarne"){
+            
+        //     alert("You can only have one article at a time!!")
+        //     console.log("You can't submit until you delete one of the articles you already have")
+           
+        //   }else{
+            
+        //   }
+        // })
+        // console.log(dbRef);
+
+
+
       })
+      
+      auth.onAuthStateChanged((user) => {
+        if(user){
+          this.setState({user});
+        }
+      })
+
+      
+
 
 
     }
@@ -48,6 +88,7 @@ export class PracticeForm extends React.Component{
     componentWillUnmount(){
       console.log("Unmount on practice-form.js")
       fire.database().ref("items").off();
+      
     }
 
     handleChange(e){
@@ -58,6 +99,10 @@ export class PracticeForm extends React.Component{
     }
 
     handleSubmit(e){
+
+
+
+
       console.log("SUBMIT!!!");      
       e.preventDefault();
 
@@ -65,49 +110,66 @@ export class PracticeForm extends React.Component{
       const currentAuthor = this.state.author;
       const currentText = this.state.text;
       const currentTitle = this.state.title;
+      const currentUser = this.state.user.email;
 
-      if(currentAuthor.length === 0 || currentText.length === 0 ||currentText.length  === 0){
-        // console.log("Can't submit")
-        alert("Please enter something in each of the marked fields.")
-      }else{
-        console.log("Can submit")
-        const dbRef = fire.database().ref('items');
-        const article = {
-          // User Input here...
-          author: this.state.author,
-          text:this.state.text,
-          title: this.state.title,
+
+      // if(currentTitle.length === 0 ||currentText.length  === 0){
+      //   // console.log("Can't submit")
+      //   alert("Error!!")
+      // }else{
+      //   console.log("Can submit")
+      //   const dbRef = fire.database().ref('items');
+      //   const article = {
+      //     // User Input here...
+      //     author: this.state.user.displayName,
+      //     text:this.state.text,
+      //     title: this.state.title,
   
-          // Auto Generated Stuff here...
-          id: (((this.state.articlesArray).length) * 3 ),
-          postdate: "12/12/2017"
-        }
-  
-  
-        const ObjectsInDbCount = (((this.state.articlesArray).length) + 1);
-        dbRef.child(ObjectsInDbCount).set(article);
+      //     // Auto Generated Stuff here...
+      //     id: (((this.state.articlesArray).length) * 3 ),
+      //     postdate: "12/12/2017"
+      //   }
   
   
+      //   const ObjectsInDbCount = (((this.state.articlesArray).length) + 1);
+      //   dbRef.child(ObjectsInDbCount).set(article);
+  
+  
+      //   this.setState({
+      //     author: '',
+      //     text: '',
+      //     title: '',
+      //     redirectToReferrer: true
+      //     // id: ''
+      //   })
+
+
+      // } 
+    }
+
+    login(){
+      auth.signInWithPopup(provider).then((result) => {
+        const user = result.user;
         this.setState({
-          author: '',
-          text: '',
-          title: '',
-          redirectToReferrer: true
-          // id: ''
-        })
+          user
+        });
+      })
+    }
 
-
-      }
-      
-
-    
-      
-
+    logout(){
+      auth.signOut().then(() => {
+        this.setState({
+          user:null
+        });
+      })
     }
 
 
 
     render(){
+      console.log("User is: " + this.state.user)
+
+
       // console.log(this.state.redirectToReferrer)
       const redirectToReferrer = this.state.redirectToReferrer;
       if (redirectToReferrer === true) {
@@ -121,10 +183,27 @@ export class PracticeForm extends React.Component{
         // const firebaseDB = this.state.articlesArray;
         return(
           <div className='form'>
-           <h1>Upload</h1>
 
-           <div className='uploadArticle'>
-            
+          {/* Login */}
+          
+          {this.state.user ?
+              <button onClick={this.logout}>Log Out</button>
+              :
+              <button onClick={this.login}>Login</button>
+          }
+
+
+        {/* Logged In View */}
+
+        {
+          this.state.user ?
+
+
+          <div className='uploadArticle'>
+          <h1>Logged in View</h1>
+          <p>{this.state.user.displayName}</p>
+          <h1>Upload</h1>
+
             <form name="myForm" onSubmit={this.handleSubmit}>
              {/* <p> 
                 Author: 
@@ -137,20 +216,30 @@ export class PracticeForm extends React.Component{
                   value={this.state.author}>
                 </input>
              </p> */}
-            <p>Author:</p>
+            {/* <p>Author:</p>
             <input                 
                 form="myForm"
                 type="text"
                 name="author"
                 onChange={this.handleChange}                   
                 required
-                value={this.state.author}>
-            </input>
-
+                value={this.state.user.email}>
+            </input> */}
+            <p>Author - Auto</p>
             <p>Dislikes - Auto</p>
             <p>Id - auto</p>
             <p>Likes - Auto</p>
             <p>Postdate - auto</p>
+
+            <p>Title</p>
+              <input                    
+                  form="myForm"
+                  type="text"
+                  name="title"
+                  onChange={this.handleChange}                   
+                  required
+                  value={this.state.title}>
+              </input>
 
             <p>Text</p>
               <textarea
@@ -164,15 +253,7 @@ export class PracticeForm extends React.Component{
                 >
               </textarea>
             
-            <p>Title</p>
-                <input                    
-                    form="myForm"
-                    type="text"
-                    name="title"
-                    onChange={this.handleChange}                   
-                    required
-                    value={this.state.title}>
-                </input>
+
 
 
             
@@ -198,6 +279,10 @@ export class PracticeForm extends React.Component{
             </form>
            
            </div>
+          :
+          <h1>Logged Out View</h1>
+        }
+          
           
           </div>
         )
